new Double ==> Double.valueOf
deprecated since="9"