@@ -91,7 +91,7 @@ public class ComplexFunction {
 				hasNumber = true;
 				number += character;
 				if (i == (f.length() - 1)) {
-					value = new Complex(new Double(number), 0);
+					value = new Complex(Double.valueOf(number), 0);
 					number = "";
 					hasNumber = false;
 				}
@@ -99,14 +99,14 @@ public class ComplexFunction {
 			} else if (character == '+') {
 
 				if (hasNumber && !isImaginary) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = f.substring(i + 1, f.length());
 					value = Complex.add(new Complex(numb, 0), eval(new_f, values, variables));
 					i += new_f.length();
 					hasNumber = false;
 					number = "";
 				} else if (hasNumber && isImaginary) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = f.substring(i + 1, f.length());
 					value = Complex.add(new Complex(0, numb), eval(new_f, values, variables));
 					i += new_f.length();
@@ -129,7 +129,7 @@ public class ComplexFunction {
 			} else if (character == '*') {
 
 				if (hasNumber && !isImaginary) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = nextFunction(f.substring(i + 1, f.length()));
 					value = Complex.mul(new Complex(numb, 0), eval(new_f, values, variables));
 					i += new_f.length();
@@ -137,7 +137,7 @@ public class ComplexFunction {
 					number = "";
 
 				} else if (hasNumber && isImaginary) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = nextFunction(f.substring(i + 1, f.length()));
 					value = Complex.mul(new Complex(0, numb), eval(new_f, values, variables));
 					i += new_f.length();
@@ -159,14 +159,14 @@ public class ComplexFunction {
 			} else if (character == '-') {
 
 				if (hasNumber && !isImaginary) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = nextMinusFunction(f.substring(i + 1, f.length()));
 					value = Complex.sub(new Complex(numb, 0), eval(new_f, values, variables));
 					i += new_f.length();
 					hasNumber = false;
 					number = "";
 				} else if (hasNumber && isImaginary) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = nextMinusFunction(f.substring(i + 1, f.length()));
 					value = Complex.sub(new Complex(0, numb), eval(new_f, values, variables));
 					i += new_f.length();
@@ -190,14 +190,14 @@ public class ComplexFunction {
 			} else if (character == '/') {
 
 				if (hasNumber && !isImaginary) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = nextFunction(f.substring(i + 1, f.length()));
 					value = Complex.div(new Complex(numb, 0), eval(new_f, values, variables));
 					i += new_f.length();
 					hasNumber = false;
 					number = "";
 				} else if (hasNumber && isImaginary) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = nextFunction(f.substring(i + 1, f.length()));
 					value = Complex.div(new Complex(0, numb), eval(new_f, values, variables));
 					i += new_f.length();
@@ -221,14 +221,14 @@ public class ComplexFunction {
 			} else if (character == '^') {
 
 				if (hasNumber && !isImaginary) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = nextFunction(f.substring(i + 1, f.length()));
 					value = Complex.pow(eval(new_f, values, variables), numb);
 					i += new_f.length();
 					hasNumber = false;
 					number = "";
 				} else if (hasNumber && isImaginary) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = nextFunction(f.substring(i + 1, f.length()));
 					value = Complex.pow(eval(new_f, values, variables), new Complex(0, numb));
 					i += new_f.length();
@@ -319,7 +319,7 @@ public class ComplexFunction {
 				if (!hasFunction) {
 					if (hasNumber) {
 
-						value = new Complex(0, new Double(number));
+						value = new Complex(0, Double.valueOf(number));
 						number = "";
 						isImaginary = true;
 					} else {
@@ -356,7 +356,7 @@ public class ComplexFunction {
 			} else if (character == 'j') {
 				if (!hasFunction) {
 					if (hasNumber) {
-						value = new Complex(0, new Double(number));
+						value = new Complex(0, Double.valueOf(number));
 						isImaginary = true;
 					} else {
 						value = new Complex(0, 1);
