@@ -76,7 +76,7 @@ public class FunctionX {
 				hasNumber = true;
 				number += character;
 				if (i == (f_x.length() - 1)) {
-					value = new Double(number).doubleValue();
+					value = Double.valueOf(number).doubleValue();
 					number = "";
 					hasNumber = false;
 				}
@@ -84,7 +84,7 @@ public class FunctionX {
 			} else if (character == '+') {
 
 				if (hasNumber) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f_x = f_x.substring(i + 1, f_x.length());
 					value = numb + eval(new_f_x, xi);
 					i += new_f_x.length();
@@ -105,7 +105,7 @@ public class FunctionX {
 			} else if (character == '*') {
 
 				if (hasNumber) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f_x = nextFunction(f_x.substring(i + 1, f_x.length()));
 					value = numb * eval(new_f_x, xi);
 					i += new_f_x.length();
@@ -126,7 +126,7 @@ public class FunctionX {
 			} else if (character == '-') {
 
 				if (hasNumber) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f_x = nextMinusFunction(f_x.substring(i + 1, f_x.length()));
 					value = numb - eval(new_f_x, xi);
 					i += new_f_x.length();
@@ -147,7 +147,7 @@ public class FunctionX {
 			} else if (character == '/') {
 
 				if (hasNumber) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f_x = nextFunction(f_x.substring(i + 1, f_x.length()));
 					value = numb / eval(new_f_x, xi);
 					i += new_f_x.length();
@@ -168,7 +168,7 @@ public class FunctionX {
 			} else if (character == '^') {
 
 				if (hasNumber) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f_x = nextFunction(f_x.substring(i + 1, f_x.length()));
 					value = StrictMath.pow(numb.doubleValue(), eval(new_f_x, xi));
 					i += new_f_x.length();
