@@ -88,7 +88,7 @@ public class FunctionXs {
 				hasNumber = true;
 				number += character;
 				if (i == (f.length() - 1)) {
-					value = new Double(number).doubleValue();
+					value = Double.valueOf(number).doubleValue();
 					number = "";
 					hasNumber = false;
 				}
@@ -96,7 +96,7 @@ public class FunctionXs {
 			} else if (character == '+') {
 
 				if (hasNumber) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = f.substring(i + 1, f.length());
 					value = numb + eval(new_f, values, variables);
 					i += new_f.length();
@@ -118,7 +118,7 @@ public class FunctionXs {
 			} else if (character == '*') {
 
 				if (hasNumber) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = nextFunction(f.substring(i + 1, f.length()));
 					value = numb * eval(new_f, values, variables);
 					i += new_f.length();
@@ -139,7 +139,7 @@ public class FunctionXs {
 			} else if (character == '-') {
 
 				if (hasNumber) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = nextMinusFunction(f.substring(i + 1, f.length()));
 					value = numb - eval(new_f, values, variables);
 					i += new_f.length();
@@ -161,7 +161,7 @@ public class FunctionXs {
 			} else if (character == '/') {
 
 				if (hasNumber) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = nextFunction(f.substring(i + 1, f.length()));
 					value = numb / eval(new_f, values, variables);
 					i += new_f.length();
@@ -183,7 +183,7 @@ public class FunctionXs {
 			} else if (character == '^') {
 
 				if (hasNumber) {
-					final Double numb = new Double(number);
+					final Double numb = Double.valueOf(number);
 					final String new_f = nextFunction(f.substring(i + 1, f.length()));
 					value = StrictMath.pow(numb.doubleValue(), eval(new_f, values, variables));
 					i += new_f.length();
